
Release 5.0.4 (unreleased)
==========================

Bug fixes
---------

- Fix bounds for dynamic profiles in imbrication module for atmo. flow.

- Compatibility fixes for coupled RSM components (irijco=1) with
  some models (such as turbulent diffusion).

- Lagrangian module: fixes for return coupling with coupled RSM model.

- GUI: fix for mesh name filter with Qt5.

- Fix bug in double backward Euler for scalars.

- Fix matrix coefficient assignment issue for MSR matrices in cases
  where multiple faces separate two given cells (such as when faces are
  subdivided). This could lead to incorrect linear solver convergence
  in those cases, affecting mostly multigrid as a preconditioner cases,
  which uses MSR-type matrices.

- Fix issue in some matrix structure selection forced cases.

- Several fixes in CFD_STUDY's interactive behavior.

- Fix missing file in theory graphics Makefile.

Release 5.0.3 (June 29 2017)
============================

Bug fixes
---------

- Fix call to eigen values computation in coupled Rij-SSG solver.

- Fix for triangulation of warped faces issue (preceding version 4.0).

Release 5.0.2 (June 23 2017)
============================

Bug fixes
---------

- Complete reinit_turb for Bl-v2-k model.

- Fix robustness issue of eigen values comput. for sym. tensors for close to
  diagonal tensors.

- Fix bug in the GUI example of the initialisation of alpha in the Bl-v2/k
  turbulence model.

- Fix user example for wall 1d thermal model.

- Fix for time averages in GUI if a start time is given.

Release 5.0.1 (June 14 2017)
============================

Bug fixes
---------

- GUI: fix imposed pressure outlet.

- Major fixes for coupled Rij solver (irijico = 1).

- Major fix in parallel when activating head losses and improved
  hydrostatic pressure algorithm.

- GUI: fix opening of advanced turbulence model options for new cases.

- Lagrangian module: fix numbering issue leading to incorrect postprocessing
  output of boundary statistics.
